fixed alignment

--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -28,7 +28,7 @@ header {
 header {
   display: flex;
   justify-content: space-between; /* pushes h1 left, logo right */
-  align-items: center;       /* aligns logo to the bottom */
+  align-items: vertical;       /* aligns logo to the bottom */
   background-color: #003058;     /* your header bg */
   padding: 10px;
   color: #fff;
